Add initial code for PTSB and N26 statement importers

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -91,3 +91,9 @@ Style/HashSyntax:
 Metrics/CyclomaticComplexity:
   Exclude:
     - 'bin/*'
+
+RSpec/ExampleLength:
+  Max: 20
+
+RSpec/MultipleExpectations:
+  Enabled: false
