--- a/package.json
+++ b/package.json
@@ -1,24 +1,28 @@
 {
   "name": "finance_micromanager",
+  "type": "module",
   "private": "true",
   "dependencies": {
-    "@hotwired/stimulus": "^3.2.1",
-    "@hotwired/turbo-rails": "^7.3.0",
-    "@inertiajs/progress": "^0.2.7",
-    "@inertiajs/vue3": "^1.0.6",
-    "@vitejs/plugin-vue": "^4.2.2",
+    "@popperjs/core": "^2.11.7",
     "autoprefixer": "^10.4.14",
+    "axios": "^1.4.0",
+    "bootstrap": "^5.2.3",
     "esbuild": "^0.17.18",
     "postcss": "^8.4.23",
-    "stimulus": "^3.2.1",
-    "tailwindcss": "^3.3.2",
-    "vite": "^4.3.5",
-    "vite-plugin-ruby": "^3.2.2",
+    "postcss-import": "^15.1.0",
+    "postcss-nested": "^6.0.1",
+    "postcss-scss": "^4.0.6",
     "vue": "^3.3.1",
     "yarn": "^1.22.19"
   },
-  "scripts": {
-    "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=assets",
-    "build:css": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css --minify"
-  }
+  "devDependencies": {
+    "@inertiajs/inertia": "^0.11.1",
+    "@inertiajs/progress": "^0.2.7",
+    "@inertiajs/vue3": "^1.0.6",
+    "@vitejs/plugin-vue": "^4.2.2",
+    "sass": "^1.62.1",
+    "vite": "^4.3.0",
+    "vite-plugin-ruby": "^3.2.0"
+  },
+  "scripts": {}
 }
