--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -51,6 +51,7 @@ Metrics/ClassLength:
     - 'app/queries/**/*.rb'
 
 Metrics/MethodLength:
+  Max: 20
   Exclude:
     - 'bin/bundle'
   AllowedMethods:
