--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "esbuild": "^0.17.18",
+    "lodash": "^4.17.21",
     "postcss": "^8.4.23",
     "postcss-import": "^15.1.0",
     "postcss-nested": "^6.0.1",
