--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@js-from-routes/client": "^1.0.4",
     "@js-from-routes/inertia": "^1.10.2",
     "@popperjs/core": "^2.11.7",
+    "@rails/ujs": "^7.0.4-3",
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
