--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.2.3",
     "esbuild": "^0.17.18",
     "lodash": "^4.17.21",
+    "pinia": "^2.0.36",
     "postcss": "^8.4.23",
     "postcss-import": "^15.1.0",
     "postcss-nested": "^6.0.1",
