Set flash and error messages on login and signup forms

--- a/.overcommit.yml
+++ b/.overcommit.yml
@@ -30,6 +30,14 @@ PreCommit:
     on_warn: fail
     command: ['rubocop']
 
+  EsLint:
+    enabled: true
+    required_executable: 'yarn'
+    command: ['yarn', 'eslint']
+    include:
+      - '**/*.js'
+      - '**/*.vue'
+
   TrailingWhitespace:
     enabled: true
     exclude:
