Add radio buttons in transaction form to choose between credit/debit, fix language selector, fix footer spacing

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -106,3 +106,9 @@ RSpec/MultipleExpectations:
 Layout/HashAlignment:
   EnforcedHashRocketStyle: table
   EnforcedColonStyle: table
+
+RSpec/NestedGroups:
+  Max: 4
+
+RSpec/ContextWording:
+  Enabled: false
