--- a/config/database.yml
+++ b/config/database.yml
@@ -2,10 +2,10 @@ default: &default
   adapter:  postgresql
   encoding: unicode
   pool:     <%= ENV.fetch('RAILS_MAX_THREADS') { 5 } %>
-  host:     <%= ENV.fetch('DATABASE_HOST') %>
+  host:     "<%= ENV.fetch('DATABASE_HOST') %>"
   port:     <%= ENV.fetch('DATABASE_PORT') %>
-  username: <%= ENV.fetch('DATABASE_USERNAME') %>
-  password: <%= ENV.fetch('DATABASE_PASSWORD') %>
+  username: "<%= ENV.fetch('DATABASE_USERNAME') %>"
+  password: "<%= ENV.fetch('DATABASE_PASSWORD') %>"
 
 development:
   <<: *default
