--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -61,6 +61,7 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
+    needs: [test, lint]
     steps:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
@@ -69,6 +70,7 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
+          registry: ${{ secrets.REGISTRY_HOSTNAME }}
           username: ${{ secrets.REGISTRY_USERNAME }}
           password: ${{ secrets.REGISTRY_PASSWORD }}
       - name: Build and push
