Create DateRangeSelector and use it to filter category data per month

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "esbuild": "^0.17.18",
     "i18n-js": "^4.2.3",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "pinia": "^2.0.36",
     "postcss": "^8.4.23",
     "postcss-import": "^15.1.0",
