--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -13,6 +13,7 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    permissions: write-all
     services:
       postgres:
         image: postgres:15-alpine
@@ -43,6 +44,11 @@ jobs:
       # Add or replace test runners here
       - name: Run tests
         run: bundle exec rspec
+
+      - name: SimpleCov Results
+        uses: joshmfrankel/simplecov-check-action@1.0.0
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
 
   lint:
     runs-on: ubuntu-latest
