--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -14,6 +14,9 @@ jobs:
   test:
     runs-on: ubuntu-latest
     permissions: write-all
+    strategy:
+      matrix:
+        ruby: ['3.2', '3.3', head]
     services:
       postgres:
         image: postgres:15-alpine
@@ -35,8 +38,9 @@ jobs:
         uses: actions/checkout@v3
       # Add or replace dependency steps here
       - name: Install Ruby and gems
-        uses: ruby/setup-ruby@55283cc23133118229fd3f97f9336ee23a179fcf # v1.146.0
+        uses: ruby/setup-ruby@v1
         with:
+          ruby-version: ${{ matrix.ruby }}
           bundler-cache: true
       # Add or replace database setup steps here
       - name: Set up database schema
@@ -56,8 +60,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
       - name: Install Ruby and gems
-        uses: ruby/setup-ruby@55283cc23133118229fd3f97f9336ee23a179fcf # v1.146.0
+        uses: ruby/setup-ruby@v1
         with:
+          ruby-version: 3.3
           bundler-cache: true
       # Add or replace any other lints here
       - name: Security audit application code
