--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dayjs": "^1.11.10",
     "esbuild": "^0.17.18",
     "i18n-js": "^4.2.3",
+    "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "pinia": "^2.0.36",
     "postcss": "^8.4.23",
