Install correct PostgreSQL 16 version on Docker image, and set backup schedule to 3am every day

--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -2,5 +2,5 @@
 :scheduler:
   :schedule:
     backup_database:
-      cron: '0 * * * *'
+      cron: '0 3 * * *'
       class: Postgresql::BackupDatabaseJob
