--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
+    "chart.js": "^4.4.1",
+    "chartjs-plugin-annotation": "^3.0.1",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "dayjs": "^1.11.10",
     "esbuild": "^0.17.18",
     "i18n-js": "^4.2.3",
@@ -25,6 +28,7 @@
     "postcss-nested": "^6.0.1",
     "postcss-scss": "^4.0.6",
     "vue": "^3.3.1",
+    "vue-chartjs": "^5.3.0",
     "yarn": "^1.22.19"
   },
   "devDependencies": {
