--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ruby: ['3.3', head]
+        ruby: ['3.2', '3.3']
     services:
       postgres:
         image: postgres:15-alpine
