Use multi-stage Dockerfile to reduce image size, fix some build issues

--- a/package.json
+++ b/package.json
@@ -2,15 +2,23 @@
   "name": "finance_micromanager",
   "private": "true",
   "dependencies": {
+    "@babel/core": "^7.21.8",
+    "@babel/eslint-parser": "^7.21.8",
+    "@babel/eslint-plugin": "^7.19.1",
+    "@babel/preset-env": "^7.21.5",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/vue-fontawesome": "^3.0.3",
+    "@inertiajs/inertia": "^0.11.1",
+    "@inertiajs/progress": "^0.2.7",
+    "@inertiajs/vue3": "^1.0.6",
     "@js-from-routes/client": "^1.0.4",
     "@js-from-routes/inertia": "^1.10.2",
     "@popperjs/core": "^2.11.7",
     "@rails/ujs": "^7.0.4-3",
+    "@vitejs/plugin-vue": "^4.2.2",
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
@@ -27,26 +35,18 @@
     "postcss-import": "^15.1.0",
     "postcss-nested": "^6.0.1",
     "postcss-scss": "^4.0.6",
+    "sass": "^1.62.1",
+    "vite": "^5.0.0",
+    "vite-plugin-ruby": "^5.0.0",
     "vue": "^3.3.1",
     "vue-chartjs": "^5.3.0",
     "yarn": "^1.22.19"
   },
   "devDependencies": {
-    "@babel/core": "^7.21.8",
-    "@babel/eslint-parser": "^7.21.8",
-    "@babel/eslint-plugin": "^7.19.1",
-    "@babel/preset-env": "^7.21.5",
-    "@inertiajs/inertia": "^0.11.1",
-    "@inertiajs/progress": "^0.2.7",
-    "@inertiajs/vue3": "^1.0.6",
-    "@vitejs/plugin-vue": "^4.2.2",
     "eslint": "^8.40.0",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-vue": "^9.13.0",
-    "eslint-plugin-vue-scoped-css": "^2.4.0",
-    "sass": "^1.62.1",
-    "vite": "^5.0.0",
-    "vite-plugin-ruby": "^5.0.0"
+    "eslint-plugin-vue-scoped-css": "^2.4.0"
   },
   "scripts": {}
 }
