--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -74,6 +74,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     needs: [test, lint]
+    if: github.ref == 'refs/heads/main'
     steps:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
