--- a/.env.docker_development
+++ b/.env.docker_development
@@ -3,3 +3,4 @@ DATABASE_HOST: host.docker.internal
 DATABASE_PORT: 5432
 DATABASE_USERNAME: finance_micromanager
 DATABASE_PASSWORD: 123456
+DATABASE_NAME: finance_micromanager_development
