Cache latest_updated_at values in Redis

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -80,6 +80,9 @@ Rails/SkipsModelValidations:
 RSpec/ExpectChange:
   EnforcedStyle: block
 
+RSpec/MessageSpies:
+  Enabled: false
+
 Style/Documentation:
   Enabled: false
 
