Configure ActiveStorage with S3 bucket

--- a/config/credentials/credentials.yml.example
+++ b/config/credentials/credentials.yml.example
@@ -1,6 +1,11 @@
 secret_key_base: ""
 newrelic_license_key: ""
 
+aws:
+  access_key_id: ""
+  secret_access_key: ""
+  region: us-east-1
+
 redis:
   password: ""
 
