Upgrade to Rails 8.0

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -135,3 +135,6 @@ FactoryBot/FactoryAssociationWithStrategy:
 
 Naming/PredicateMethod:
   Enabled: false
+
+Rails/StrongParametersExpect:
+  Enabled: false
