Update Dockerfile to enable jemalloc and YJIT, add Docker build cache to Github action

--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -83,7 +83,9 @@ jobs:
       - name: Build
         uses: docker/build-push-action@v5
         with:
-          push: false
+          push: true
           platforms: linux/arm64
           file: deploy/docker/rails.Dockerfile
           tags: ${{ secrets.REGISTRY_HOSTNAME }}/finance_micromanager:latest
+          cache-from: type=registry,ref=user/app:buildcache
+          cache-to: type=registry,ref=user/app:buildcache,mode=max
