--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -17,7 +17,7 @@ on:
         - minor
         - major
 jobs:
-  deploy:
+  create_release:
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
     steps:
@@ -30,6 +30,8 @@ jobs:
         run: |
           bin/bump_version ${{ inputs.version_type }}
           echo "version=$(cat VERSION)" >> $GITHUB_OUTPUT
+      - name: Delete existing coverage.csv file
+        run: rm spec/coverage.csv
       - name: Download coverage.csv artifact
         uses: dawidd6/action-download-artifact@v11
         with:
