Fix transaction matcher modal issue and typo in Sidekiq job scheduling

--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -9,4 +9,4 @@
       class: ProcessTransactionAutomationsJob
     create_budget_instances:
       cron: '1 0 1 * *'
-      class: 'CreateBudgetInstances'
+      class: CreateBudgetInstancesJob
